feat: moved doc-hub functionality to watchtower + removed s3 events listening
