# internal/application/dto/message.go
@@ -6,10 +6,3 @@ type Message struct {
 	EventId uuid.UUID `json:"event_id"`
 	Body    TaskEvent `json:"body"`
 }
-
-func FromTaskEvent(event TaskEvent) Message {
-	return Message{
-		EventId: uuid.New(),
-		Body:    event,
-	}
-}
